2006-08-18 [paul]	0.24.1cvs1

	* configure.ac
		bump up GLib and GTK+ minimum required versions,
		following Claws

2006-06-12 [paul]	0.24.1

	0.24.1 released

2006-06-06 [wwp]	0.24.0cvs2

	* configure.ac
	* src/.cvsignore
	* src/Makefile.am
	* src/plugin.c
	* src/plugin_version.h.in
		fix/unify/simplify autostuff, get rid of src/plugin_version.h{,.in} (use pluginconfig.h instead),
		removed extra linefeeds in plugin info text.

2006-06-03 [wwp]	0.24.0cvs1

	* commitHelper
	* PATCHSETS
	* configure.ac
		introducing commitHelper for plugins too.

2006-05-16 [colin] 	0.24

	* src/maildir.c
	  src/uiddb.c
		Optimisation: 
		- adds GLOB_NOSORT to glob() calls to avoid 
		  useless sorting of the results
		- tracks the tail of the linked list when 
		  appending new entries, instead of running 
		  from the head to tail all the time 
		  (O(n^2) -> O(n))
		- uses binary search in 
		  uiddb_delete_entries_not_in_list() instead of
		  linear lookup (O(n^2) -> O(n*log n))

		Patch by Jindrich Makovicka <makovick@gmail.com>

2006-05-14 [colin] 	0.23

	* src/plugin.c
		Fix segfault with bdb4.2 (db environment
		closed before the databases). Patch by
		Jindrich Makovicka <makovick@gmail.com>

2006-04-30 [wwp] 	0.22

	* configure.ac
		check for new versions of BSD DB.
		Patch by Pawel Pekala.

2006-04-07 [colin] 	0.21

	* configure.ac
		Optionnaly handle --prefix.
		Patch by Pawel Pekala.

2006-02-12 [colin]	0.20

	* Check for mainwin before using it

2006-01-23 [paul]	0.19

	* fix crash after unloading plugin

2006-01-14 [colin]	0.18

	* Update default items when moving them

2006-01-14 [colin]	0.17

	* HIGify buttons

2005-12-28 [colin]	0.15

	* Fix libdb linking - closes #880

2005-12-28 [colin]	0.14

	* Add null pointers checks

2005-12-15 [paul]	0.13

	* Add plugin_version()

2005-12-13 [paul]	0.12

	* src/Makefile.am
	* src/plugin.c
	* src/plugin_gtk.c 	** REMOVED **
		merge maildir and maildir_gtk plugins

2005-12-07 [colin]      0.11

	* Add plugin_licence()