@@ -1,3 +1,4 @@
 ( diff -u /dev/null commitHelper;  diff -u /dev/null PATCHSETS;  cvs diff -u -r 1.6.2.22 -r 1.6.2.23 configure.ac;  ) > 0.24.0cvs1.patchset
 ( cvs diff -u -r 1.6.2.23 -r 1.6.2.24 configure.ac;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 src/.cvsignore;  cvs diff -u -r 1.4.2.7 -r 1.4.2.8 src/Makefile.am;  cvs diff -u -r 1.6.2.6 -r 1.6.2.7 src/plugin.c;  cvs diff -u -r -1.1.2.1 -r -1.1.2.2 src/plugin_version.h.in;  ) > 0.24.0cvs2.patchset
 ( cvs diff -u -r 1.6.2.25 -r 1.6.2.26 configure.ac;  ) > 0.24.1cvs1.patchset
+( cvs diff -u -r 1.6.2.7 -r 1.6.2.8 src/plugin.c;  ) > 0.24.1cvs2.patchset
